# rk-transformers

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  docs.yml  lint.yaml  release.yaml
docs/: .gitignore  conf.py  development.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: configuration.rst  env_utils.rst  exporters.rst  import_utils.rst  index.rst  integrations.rst  modeling.rst
docs/user_guide/: export.rst  index.rst  inference.rst  integrations.rst  limitations.rst  npu_cores.rst
scripts/: download_hf_rknn.py  load_hf_rknn.py
src/rkruntime/: __init__.py  configuration.py  constants.py  load.py  modeling.py
src/rkruntime/utils/: env_utils.py  import_utils.py
src/rktransformers/: __init__.py  configuration.py  constants.py  export.py  load.py  modeling.py  modeling_decoder.py  modeling_outputs.py  modeling_utils.py
src/rktransformers/commands/: base.py  env.py  rktransformers_cli.py
src/rktransformers/commands/export/: rknn.py
src/rktransformers/commands/register/: register_rknn.py
src/rktransformers/exporters/rknn/: convert.py  model_card.py  model_card_template.md  utils.py
src/rktransformers/exporters/rknn/model_card_usage_templates/: RKModelForCausalLM.md  RKModelForFeatureExtraction.md  RKModelForMaskedLM.md  RKModelForMultipleChoice.md  RKModelForQuestionAnswering.md  RKModelForSequenceClassification.md  RKModelForTokenClassification.md
src/rktransformers/integrations/: __init__.py  sentence_transformers.py
src/rktransformers/kernels/: __init__.py  cum_sum.py
src/rktransformers/utils/: docs.py  env_utils.py  import_utils.py  logging_utils.py  modeling_utils.py
tests/: conftest.py  test_configuration.py  test_cross_encoder_patch.py  test_load_rknn.py  test_modeling.py  test_rknn_patch.py  test_sentence_transformer_patch.py  test_utils.py
tests/commands/: test_rktransformers_cli.py
tests/data/random_bert/: README.md  config.json  model.onnx  rknn.json
tests/data/random_bert/rknn/: model_b1_s32_o3.rknn
tests/data/random_roberta/: README.md  config.json  model.onnx  rknn.json
tests/exporters/rknn/: test_auto_task.py  test_decoder_export.py  test_exporter.py  test_model_card.py  test_resolve_hub_repo.py
tests/integrations/sentence_transformers/: test_load_rknn_model.py  test_rk_cross_encoder.py  test_rk_sentence_transformer.py
tests/kernels/: test_custom_op.py
tests/load/: test_cross_encoder_patch.py  test_sentence_transformer_patch.py
tests/modeling/: test_modeling.py  test_modeling_decoder.py  test_modeling_integration.py
